--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/
     - assets/svgs/
     - assets/fi-as2-hira-assets/
+    - assets/fi-as2-hira-assets/hira_svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
