--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/
     - assets/svgs/
     - assets/fi_ass2_rohan_assets/
+    - assets/fi_ass2_rohan_assets/svg_rohan/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
