--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
   
+  # firebase
+  firebase_core: ^2.14.0
+
+  # utils/design
   dotted_border: ^2.0.0+3
-  cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+
+  # icon packs
+  cupertino_icons: ^1.0.2
+
+  # fonts
   google_fonts: ^5.1.0
 
 dev_dependencies:
@@ -53,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/images/
     - assets/svgs/
     - assets/fi-as2-hira-assets/
     - assets/fi-as2-hira-assets/hira_svg/
